@@ -130,8 +130,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>12</source>
-					<target>12</target>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
 				</configuration>
 			</plugin>
             <plugin>
@@ -184,7 +184,6 @@
                         <encoding>UTF-8</encoding>
                         <compilerArgs>
                             <arg>-parameters</arg>
-                            <arg>--enable-preview</arg>
                         </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
